--- a/NewsAppTask/Scenes/BoardingModule/Choose Category/View/Cell/CategoryTableViewCell.xib
+++ b/NewsAppTask/Scenes/BoardingModule/Choose Category/View/Cell/CategoryTableViewCell.xib
@@ -9,31 +9,31 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CountryTableViewCell" id="KGk-i7-Jjw" customClass="CountryTableViewCell" customModule="NewsAppTask" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="429" height="50"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryTableViewCell" id="KGk-i7-Jjw" customClass="CategoryTableViewCell" customModule="NewsAppTask" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="429" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EnA-Jc-29y">
-                        <rect key="frame" x="15" y="14.5" width="399" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ht5-uh-A7f">
+                        <rect key="frame" x="16" y="11.5" width="288" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="EnA-Jc-29y" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="OeE-UT-xxn"/>
-                    <constraint firstItem="EnA-Jc-29y" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="y0O-JL-nti"/>
-                    <constraint firstAttribute="trailing" secondItem="EnA-Jc-29y" secondAttribute="trailing" constant="15" id="zHf-af-LrM"/>
+                    <constraint firstItem="ht5-uh-A7f" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ULy-XV-fNT"/>
+                    <constraint firstAttribute="trailing" secondItem="ht5-uh-A7f" secondAttribute="trailing" constant="16" id="ZeP-Vq-3Uv"/>
+                    <constraint firstItem="ht5-uh-A7f" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="lnY-s6-0zA"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="countryNameLb" destination="EnA-Jc-29y" id="G7m-Qn-GXM"/>
+                <outlet property="categoryLb" destination="ht5-uh-A7f" id="TOk-Dy-Eaa"/>
             </connections>
-            <point key="canvasLocation" x="-151.44927536231884" y="-58.258928571428569"/>
+            <point key="canvasLocation" x="125" y="71"/>
         </tableViewCell>
     </objects>
 </document>
